[package]
name = "rustplay"
version = "0.1.0"
edition = "2021"
authors = ["Filip Kalebo<info@rustsyndi.cat>"]
homepage = "https://github.com/flipchan/rusty-substrate-api"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
subxt = "0.33.0"
serde = { version = "1.0.195", features = ["derive"], default-features = false }
